--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <main>
       <div class="end">
         <div class="file">
-            <img src="/nyc-35.jpg">
+            <img src="/test/nyc-35.jpg">
             <h3>Card 1</h3>
             <p>This is a description of Card 1.</p>
 
         </div>
         <div class="file2">
-            <img src="/20200325121058_03780100.jpg">
+            <img src="/test/20200325121058_03780100.jpg">
             <h3>Card 2</h3>
             <p>This is a description of Card 2.</p>
         </div>
         <div class="file3">
-            <img src="/2022_porsche_panamera_sedan_turbo-s-executive_rq_oem_1_815.avif">
+            <img src="/test/2022_porsche_panamera_sedan_turbo-s-executive_rq_oem_1_815.avif">
             <h3>Card 3</h3>
             <p>This is a description of Card 3.</p>
 
@@ -29,7 +29,7 @@
       </div>
        <div class="end2">
       <div class="file4">
-        <img src="/teach-you-computer-related-concept.jpg">
+        <img src="/test/teach-you-computer-related-concept.jpg">
         <h3>Card 4</h3>
         <p>This is a description of Card 4.</p>
       </div>
